k8s/cadvisor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --out k8s/
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: cadvisor
  name: cadvisor
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cadvisor
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --out k8s/
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/elixir-default: "true"
        io.kompose.service: cadvisor
    spec:
      containers:
        - image: google/cadvisor:latest
          name: cadvisor
          ports:
            - containerPort: 8080
          resources: {}
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /rootfs
              name: cadvisor-claim0
              readOnly: true
            - mountPath: /var/run
              name: cadvisor-claim1
            - mountPath: /sys/fs/cgroup/cpuacct,cpu
              name: cadvisor-claim2
            - mountPath: /var/lib/docker
              name: cadvisor-claim3
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: cadvisor-claim0
          persistentVolumeClaim:
            claimName: cadvisor-claim0
            readOnly: true
        - name: cadvisor-claim1
          persistentVolumeClaim:
            claimName: cadvisor-claim1
        - name: cadvisor-claim2
          persistentVolumeClaim:
            claimName: cadvisor-claim2
        - name: cadvisor-claim3
          persistentVolumeClaim:
            claimName: cadvisor-claim3
            readOnly: true
status: {}
