k8s/nodeexporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --out k8s/
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: nodeexporter
  name: nodeexporter
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nodeexporter
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --out k8s/
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/elixir-default: "true"
        io.kompose.service: nodeexporter
    spec:
      containers:
        - args:
            - --path.procfs=/host/proc
            - --path.rootfs=/rootfs
            - --path.sysfs=/host/sys
            - --collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($()$()|/)
          image: prom/node-exporter:latest
          name: node-exporter
          ports:
            - containerPort: 9100
          resources: {}
          volumeMounts:
            - mountPath: /host/proc
              name: nodeexporter-claim0
              readOnly: true
            - mountPath: /host/sys
              name: nodeexporter-claim1
              readOnly: true
            - mountPath: /rootfs
              name: nodeexporter-claim2
              readOnly: true
      hostname: nodeexporter
      restartPolicy: Always
      volumes:
        - name: nodeexporter-claim0
          persistentVolumeClaim:
            claimName: nodeexporter-claim0
            readOnly: true
        - name: nodeexporter-claim1
          persistentVolumeClaim:
            claimName: nodeexporter-claim1
            readOnly: true
        - name: nodeexporter-claim2
          persistentVolumeClaim:
            claimName: nodeexporter-claim2
            readOnly: true
status: {}
